--- a/scpoadapter/scpoadapter-store.yaml
+++ b/scpoadapter/scpoadapter-store.yaml
@@ -6,7 +6,7 @@ scpo:
   ms:
     fail:
       duplicate:
-        messages: "false"
+        messages: "true"
     enabled: "true"
     server:
       requester:
