--- a/scpoadapter/scpoadapter-tables.yaml
+++ b/scpoadapter/scpoadapter-tables.yaml
@@ -7,9 +7,9 @@ scpo:
           rolling-offset: 15 # number of mins or hours at which new folder will be created  
         create_csv_per_message: false  
         bulk_csv_source_dir:
-          path: "c:\\csvdata"
+          path: "//MD1NPDVJCE01.dev.corp.local/Tools/u/SCPO-A/csvdata"
         processed_csv_dir:
-          path: "c:\\archive"  
+          path: "//MD1NPDVJCE01.dev.corp.local/Tools/u/SCPO-A/archive"  
     bydm_billofmaterial:
       #version: "2021.2.0"
       tables: "bom,altbom"
