--- a/scpoadapter/scpoadapter-bulk.yaml
+++ b/scpoadapter/scpoadapter-bulk.yaml
@@ -20,8 +20,8 @@ bulk:
     store:
       host:
       #supported possible values are Azure Blob Store, Local File Store  
-      type: "Local File Store"
-      path: "//MD1NPDVJCE01.dev.corp.local/Tools/u/SCPO"  
+      type: "Azure Blob Store"
+      path: 
   callback:
     # supported possible values are AzureBlob, FILE
     protocol: "FILE"
