--- a/scpoadapter/scpoadapter-db.yaml
+++ b/scpoadapter/scpoadapter-db.yaml
@@ -15,11 +15,11 @@ scpo:
       errors:
         msg: "Continuous Errors in the batch"
     oracle:
-      host: md1npdvjce01
+      host: md1npdvcid02
       port: "1521"
       instance: o19c01
-      user: SCPOMGR
-      staging-user: IGPMGR
+      user: TST_SCPOMGR
+      staging-user: TST_IGPMGR
       max:
         idle:
           time:
