--- a/scpoadapter/scpoadapter-secure.yaml
+++ b/scpoadapter/scpoadapter-secure.yaml
@@ -7,8 +7,8 @@ scpo:
     password-secure: admin
   db:
     oracle:
-      password-secure: SCPOMGR
-      staging-password-secure: IGPMGR
+      password-secure: TST_SCPOMGR
+      staging-password-secure: TST_IGPMGR
       
 ##########################################################
 #
@@ -77,4 +77,4 @@ canmodel:
 sqlldr:
   path-secure: "C:\\oracle\\product\\19c\\bin\\sqlldr.exe"
   connection:
-    string-secure: "IGPMGR/IGPMGR@md1npdvjce01:1521/o19c01"
+    string-secure: "TST_IGPMGR/TST_IGPMGR@md1npdvjce01:1521/md1npdvcid02"
