--- a/scpoadapter/scpoadapter-secure.yaml
+++ b/scpoadapter/scpoadapter-secure.yaml
@@ -77,4 +77,4 @@ canmodel:
 sqlldr:
   path-secure: "C:\\oracle\\product\\19c\\bin\\sqlldr.exe"
   connection:
-    string-secure: "TST_IGPMGR/TST_IGPMGR@md1npdvjce01:1521/md1npdvcid02"
+    string-secure: "TST_IGPMGR/TST_IGPMGR@md1npdvcid02:1521/O19C01"
