--- a/scpoadapter/scpoadapter-hierarchies.yaml
+++ b/scpoadapter/scpoadapter-hierarchies.yaml
@@ -1,7 +1,14 @@
 scpo:
   tables:
     hierarchies:
-      total: 3
+      total: 10
       '0': 'uom'
       '1': 'uomcategory'
       '2': 'ddeprofile'
+      '3': 'item'
+      '4': 'dmdunit'
+      '5': 'uomcategoryconvfactor'
+      '6': 'loc'
+      '7': 'sku'
+      '8': 'bom'
+      '9': 'altbom'
