--- a/scpoadapter/scpoadapter.yaml
+++ b/scpoadapter/scpoadapter.yaml
@@ -42,7 +42,7 @@ bydm:
     
   inventory:
     aggregation:
-      enabled: true
+      enabled: false
       categories: "AVAILABLE_FOR_SALE"
   hist:
     aggregation:
