--- a/scpoadapter/scpoadapter.yaml
+++ b/scpoadapter/scpoadapter.yaml
@@ -46,7 +46,7 @@ bydm:
 #inventory and hist aggregation configuration    
   inventory:
     aggregation:
-      enabled: false
+      enabled: true
       categories: "AVAILABLE_FOR_SALE"
   hist:
     aggregation:
