--- a/scpoadapter/scpoadapter-outbounds.yaml
+++ b/scpoadapter/scpoadapter-outbounds.yaml
@@ -15,7 +15,7 @@ scpo:
     recship:
       receivers: 'HOST.GLOBAL'
       messagetype: 'plannedSupply'
-      format: 'bydm'
+      format: 'csv'
       #version: '2021.2.0'
     vehicleloadline:
       receivers: 'HOST.GLOBAL'
