--- a/scpoadapter/scpoadapter-outbounds.yaml
+++ b/scpoadapter/scpoadapter-outbounds.yaml
@@ -6,7 +6,7 @@ scpo:
       receivers: 'HOST.GLOBAL'
       messagetype: 'forecast2'
       #version: '2021.2.0'
-      format: 'bydm'
+      format: 'csv'
     dfutoskufcst:
       receivers: 'HOST.GLOBAL'
       messagetype: 'forecast2'
