--- a/scpoadapter/scpoadapter-store.yaml
+++ b/scpoadapter/scpoadapter-store.yaml
@@ -29,7 +29,7 @@ scpo:
           host: "md1npdvjce01.dev.corp.local"
           port: "9831"
         https:
-          host: "localhost"
+          host: "md1npdvjce01.dev.corp.local"
           port: "9830"
           tls:
             keyStore:
