--- a/scpoadapter/scpoadapter-scheduler.yaml
+++ b/scpoadapter/scpoadapter-scheduler.yaml
@@ -1,5 +1,5 @@
 #SCPO adapter schedular configuration to move data from CSV to IGP
 scheduler:
   csv-to-igp:
-    enabled: true
+    enabled: false
     frequency: '1' #in mins.
