--- a/scpoadapter/scpoadapter-db.yaml
+++ b/scpoadapter/scpoadapter-db.yaml
@@ -8,11 +8,14 @@ scpo:
     blockSize: "100"
     fetchSize: "1000"
     oracle:
-      host: MD1NPDVJCE01
+      #host: MD1NPDVJCE01
+      host: md1npdvcid02
       port: "1521"
       instance: O19C01
-      user: SCPOMGR
-      staging-user: IGPMGR
+      #user: SCPOMGR
+      #staging-user: IGPMGR
+      user: TST_SCPOMGR
+      staging-user: TST_IGPMGR
       max:
         idle:
           time:
