--- a/scpoadapter/scpoadapter-secure.yaml
+++ b/scpoadapter/scpoadapter-secure.yaml
@@ -14,8 +14,10 @@ mbJmsComponent:
 scpo:
   db:
     oracle:
-      password-secure: SCPOMGR
-      staging-password-secure: IGPMGR
+      #password-secure: SCPOMGR
+      #staging-password-secure: IGPMGR
+      password-secure: TST_SCPOMGR
+      staging-password-secure: TST_IGPMGR
       
 ##########################################################
 #
@@ -84,4 +86,5 @@ canmodel:
 sqlldr:
   path-secure: "C:\\oracle\\product\\19c\\bin\\sqlldr.exe"
   connection:
-    string-secure: "IGPMGR/IGPMGR@md1npdvjce01:1521/o19c01"
+    #string-secure: "IGPMGR/IGPMGR@md1npdvjce01:1521/o19c01"
+    string-secure: "TST_IGPMGR/TST_IGPMGR@md1npdvcid02:1521/o19c01"
