--- a/scpoadapter/scpoadapter-aggregator.yaml
+++ b/scpoadapter/scpoadapter-aggregator.yaml
@@ -43,7 +43,7 @@ bydm:
       enabled: false
       size: 3
     item:
-      enabled: false
+      enabled: true
       size: 3 
     purchaseorder:
       enabled: false
